# B5_NED_LM_project

testresults/: Dockerfile_Steamlt.dev  README.md  compose.yaml  pyproject.toml
testresults/PDFExtractor/: Dockerfile.dev  Dockerfile1.dev1  composetmp.yamltmp  pyproject.toml
testresults/PDFExtractor/pdfextractor/: PDFReader.py
testresults/testresults/: PDFReader.py  XMLtoJson.py  tResults.py  tapi.py  tresultsapi.py
testresults/tests/: test_main.py
