[tool.poetry]
name = "testresults"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
httpx = "^0.27.0"
httpie = "^3.2.2"
requests = "^2.32.3"
fitz = "^0.0.1.dev2"
pymupdf = "^1.24.5"
streamlit = "^1.35.0"
pydantic = "^2.7.2"
sqlmodel = "^0.0.18"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tabula = "^1.0.5"
tabula-py = "^2.9.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
